--- a/TaskManager.Web/wwwroot/css/home.css
+++ b/TaskManager.Web/wwwroot/css/home.css
@@ -270,7 +270,7 @@ body {
     border-left: 5px solid #ffc107;
 }
 
-/* 🎀 HERO SECTION */
+/*  HERO SECTION */
 .hero-section {
     padding: 80px 20px;
     background: linear-gradient(to right, #6baef7, #C4E7FF);
